[tool.poetry]
name = "model_conversion_graph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.6.3"
pydantic = "^1.8.2"
graphql-core = {version = "~=3.0.0b6", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
