[tool.poetry]
name = "model_conversion_graph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.6.3"
pydantic = "^1.8.2"
graphene = {version = "^3.0b7", allow-prereleases = true}
graphql-core = "^3.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
